<resources>
    <string name="app_name">BabyBookPH</string>

    // Login
    <string name="SignInToYourAccount">Sign In to Your Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotpwd">Forgot Password?</string>
    <string name="AllRightsReserved">eBaby Book PH. All rights reserved. 2017</string>
    // End of Login

    // Registration
    <string name="register">Register</string>
    <string name="registerDesc">Sign up and get monthly updates and newsletter</string>
    <string name="lblEmail">Email:</string>
    <string name="lblUsername">Username:</string>
    <string name="lblPassword">Password:</string>
    <string name="lblPasswordConfirm">Confirm Password:</string>
    <string name="lblAccountType">Account Type:</string>
    <string name="signup">Sign Up</string>
    // End of Registration

    // Main Menu
    <string name="mainmenuTitle">Happy Parenting</string>
    <string name="mainmenuDesc">Share updates with your spouse, yaya, or family members. Sync updates, plan schedules and many more.</string>
    <string name="babyInfo">Baby Info</string>
    <string name="nurture">Nurture</string>
    <string name="myPedia">My Pedia</string>
    <string name="thousandDays">1000 Days</string>
    <string name="tips">Tips</string>
    <string name="forum">Forum</string>
    <string name="videos">Videos</string>
    <string name="community">Community</string>
    <string name="faqs">FAQs</string>
    // End of Main Menu

</resources>
