<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bbprojekt.babybookph.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp"
        android:background="@color/colorWhite">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_babybookph_logo_big"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignInToYourAccount"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:gravity="center"
        android:background="@color/colorLightGray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="42dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/inputtext_default">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_user"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/I_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:hint="@string/username"
                    android:textColorHint="@color/colorGray"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="6dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/inputtext_default">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_pass_lock"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/I_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorGray"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/Btn_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:background="@drawable/btn_rounded_pink"/>

            <TextView
                android:id="@+id/Btn_ForgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/forgotpwd"
                android:textColor="@color/colorGray"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/colorGray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AllRightsReserved"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</LinearLayout>
