<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bbprojekt.babybookph.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/colorWhite">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_babybookph_logo_big"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="24"
        android:gravity="center"
        android:background="@color/colorLightGray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingLeft="36dp"
            android:paddingStart="36dp"
            android:paddingRight="36dp"
            android:paddingEnd="36dp"
            android:paddingBottom="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/register"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textAllCaps="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/registerDesc"
                android:textSize="13sp"
                android:textColor="@color/colorGray"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:text="@string/lblEmail"
                android:textSize="12sp"
                android:textColor="@color/colorGray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/inputtext_default_thin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/I_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:text="@string/lblUsername"
                android:textSize="12sp"
                android:textColor="@color/colorGray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/inputtext_default_thin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/I_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:text="@string/lblPassword"
                android:textSize="12sp"
                android:textColor="@color/colorGray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/inputtext_default_thin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/I_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:text="@string/lblPasswordConfirm"
                android:textSize="12sp"
                android:textColor="@color/colorGray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/inputtext_default_thin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/I_PasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:text="@string/lblAccountType"
                android:textSize="12sp"
                android:textColor="@color/colorGray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/inputtext_default_thin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/I_AccountType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/Btn_Signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/signup"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:background="@drawable/btn_rounded_pink"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/colorGray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AllRightsReserved"
            android:textSize="12sp"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</LinearLayout>
